<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Agenda</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_lista">Lista</string>
    <string name="title_activity_formulario">Formulario</string>
    
    <string name="formulario_nome">Nome:</string>
    <string name="formulario_site">Site:</string>
    <string name="formulario_endereco">Endereço:</string>
    <string name="formulario_telefone">Telefone:</string>
    <string name="formulario_nota">Nota:</string>
    <string name="formulario_bt_salvar">Salvar</string>
    
    <string name="menu_principal_novo">Novo</string>
    <string name="menu_principal_info">Device Info</string>
    <string name="menu_principal_mapa">Informações</string>
    <string name="menu_principal_opcoes">Mais opções</string>
    <string name="menu_principal_enviar_alunos">Sincronizar</string>
    <string name="menu_principal_receber_provas">Baixar Provas</string>
    <string name="menu_principal_preferencias">Preferências</string>
    <string name="menu_principal_marcelino">Marcelino</string>
    
    
</resources>