<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50dp"
    tools:context=".FormularioActivity" >

    <ImageView 
        android:id="@+id/foto"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_no_image"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formulario_nome" />
    
    <EditText
        android:id="@+id/nome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formulario_site" />
    
    <EditText
        android:id="@+id/site"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formulario_endereco" />
    
    <EditText
        android:id="@+id/endereco"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formulario_telefone" />
    
    <EditText
        android:inputType="number"
        android:id="@+id/telefone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formulario_nota" />
    
	<SeekBar
        android:id="@+id/nota"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
	
	<Button
        android:id="@+id/confirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/formulario_bt_salvar" />
    
</LinearLayout>